@@ -1,3 +1,9 @@
+2011-09-28  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * src/utils.c:
+   Fix utils_string_replace_all() to accept a NULL replacement again.
+
+
 2011-09-26  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/editor.c:
